Revert to 'Stream.collect(Collectors.toList())'